spacing fixes

--- a/styles/pages/_error-pages.scss
+++ b/styles/pages/_error-pages.scss
@@ -50,8 +50,5 @@ section.session-timeout{
 	}
 	section.session-timeout{
 		padding-top: 100px;
-		> .container {
-
-		}
 	}
 }
